[package]
name = "course-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
tokio = { version = "1.0", features = ["full"] }
query_params = "0.1.0"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
dotenv = "0.15.0"
